--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,5 @@
 # secrets in it. If you are cloning this repo, create a copy of this file named
 # ".env" and populate it with your secrets.
 
-Get the Database URL from the "prisma" dropdown selector in PlanetScale. 
-DATABASE_URL='mysql://YOUR_MYSQL_URL_HERE?sslaccept=strict'
+
+DATABASE_URL='mysql://n7ynmiuvy3zhn9ntswe3:pscale_pw_oRjlZn6xyv2RiW461dE2vdmAgfuNh63An8ZbL7UYQIL@aws.connect.psdb.cloud/sep-ats?sslaccept=strict'
