--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "airtable": "^0.12.2",
+    "google-spreadsheet": "^4.1.1",
     "next": "^14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
