--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "airtable": "^0.12.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.0.0-rc22",
     "google-spreadsheet": "^4.1.1",
     "lucide-react": "^0.323.0",
     "next": "^14.0.4",
