--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/adapter-planetscale": "^5.6.0",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
@@ -33,6 +34,7 @@
     "google-spreadsheet": "^4.1.1",
     "lucide-react": "^0.323.0",
     "next": "^14.0.4",
+    "prisma-zod-generator": "^0.8.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
